force-app/main/default/objects/Location__c/fields/accm2_rec_type__c.field-meta.xml
<CustomField>
    <fullName>accm2_rec_type__c</fullName>
    <inlineHelpText>Record type.  1= Customer, 2= Vendor</inlineHelpText>
    <label>accm2_rec_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>