force-app/main/default/objects/Location__c/fields/accm2_short_name__c.field-meta.xml
<CustomField>
    <fullName>accm2_short_name__c</fullName>
    <inlineHelpText>Account Name Shortened</inlineHelpText>
    <label>accm2_short_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>