force-app/main/default/objects/Location__c/fields/accm3_pr_cus_sup__c.field-meta.xml
<CustomField>
    <fullName>accm3_pr_cus_sup__c</fullName>
    <inlineHelpText>Parent Account Number.  If it is the same as Accm1_cus_sup it is the root account.</inlineHelpText>
    <label>accm3_pr_cus_sup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>