force-app/main/default/objects/Location__c/fields/addr1_rec_ref__c.field-meta.xml
<CustomField>
    <fullName>addr1_rec_ref__c</fullName>
    <inlineHelpText>Account Number</inlineHelpText>
    <label>addr1_rec_ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>