force-app/main/default/objects/Location__c/fields/addr1_ref__c.field-meta.xml
<CustomField>
    <fullName>addr1_ref__c</fullName>
    <inlineHelpText>Location Number.  Location 99 is always the pay to/from address. 2-180 are locations.</inlineHelpText>
    <label>addr1_ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>