force-app/main/default/objects/Location__c/fields/addrcarrier__c.field-meta.xml
<CustomField>
    <fullName>addrcarrier__c</fullName>
    <inlineHelpText>Industry Group</inlineHelpText>
    <label>addrcarrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>