force-app/main/default/objects/Location__c/fields/addrdel_lead__c.field-meta.xml
<CustomField>
    <fullName>addrdel_lead__c</fullName>
    <label>addrdel_lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>