force-app/main/default/objects/Location__c/fields/addrline1__c.field-meta.xml
<CustomField>
    <fullName>addrline1__c</fullName>
    <inlineHelpText>Location Name</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>