force-app/main/default/objects/Location__c/fields/addrline2__c.field-meta.xml
<CustomField>
    <fullName>addrline2__c</fullName>
    <inlineHelpText>Location Address Line 1</inlineHelpText>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>