force-app/main/default/objects/Location__c/fields/addrline3__c.field-meta.xml
<CustomField>
    <fullName>addrline3__c</fullName>
    <inlineHelpText>Location Address Line 2</inlineHelpText>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>