force-app/main/default/objects/Location__c/fields/addrphone__c.field-meta.xml
<CustomField>
    <fullName>addrphone__c</fullName>
    <inlineHelpText>Phone Number</inlineHelpText>
    <label>addrphone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>