force-app/main/default/objects/Location__c/fields/addrpost_code__c.field-meta.xml
<CustomField>
    <fullName>addrpost_code__c</fullName>
    <inlineHelpText>Zip Code</inlineHelpText>
    <label>Address Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>