force-app/main/default/objects/Location__c/fields/addrregion__c.field-meta.xml
<CustomField>
    <fullName>addrregion__c</fullName>
    <inlineHelpText>Region.  Export, Mid West, North West, South, Mid Atlantic, North East, Plains, South West,  West.</inlineHelpText>
    <label>Address Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>