force-app/main/default/objects/Location__c/fields/addrsalesman__c.field-meta.xml
<CustomField>
    <fullName>addrsalesman__c</fullName>
    <inlineHelpText>Hoogwegt employee who manages the account.  If blank no employee is assigned to this account.</inlineHelpText>
    <label>addrsalesman</label>
    <length>255</length>
    <type>Text</type>
</CustomField>