force-app/main/default/objects/Location__c/fields/addrupdate_count__c.field-meta.xml
<CustomField>
    <fullName>addrupdate_count__c</fullName>
    <inlineHelpText>Update count</inlineHelpText>
    <label>addrupdate_count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>