force-app/main/default/objects/Location__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>QM Certification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>