force-app/main/default/objects/Location__c/fields/cvof1_cus_sup__c.field-meta.xml
<CustomField>
    <fullName>cvof1_cus_sup__c</fullName>
    <inlineHelpText>Account Number</inlineHelpText>
    <label>cvof1_cus_sup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>