force-app/main/default/objects/Location__c/fields/cvof2_addr_ref__c.field-meta.xml
<CustomField>
    <fullName>cvof2_addr_ref__c</fullName>
    <inlineHelpText>1 is for the main Profile Account data</inlineHelpText>
    <label>cvof2_addr_ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>