force-app/main/default/objects/Location__c/fields/cvof2_co_site__c.field-meta.xml
<CustomField>
    <fullName>cvof2_co_site__c</fullName>
    <inlineHelpText>Which Hoogwegt Company does this belong to HW=Hoogwegt US, GH=Good Home Foods, LP= Lactopura.  We are no longer using GH &amp; LP.</inlineHelpText>
    <label>cvof2_co_site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>