force-app/main/default/objects/Location__c/fields/cvof2_crm_xref__c.field-meta.xml
<CustomField>
    <fullName>cvof2_crm_xref__c</fullName>
    <inlineHelpText>GUID for matching record in CRM. Locations with matching GUID&apos;s are the same location but they are in multiple spots in ERP.</inlineHelpText>
    <label>cvof2_crm_xref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>