force-app/main/default/objects/Location__c/fields/Cvoffax1__c.field-meta.xml
<CustomField>
    <fullName>Cvoffax1__c</fullName>
    <label>Address Fax</label>
    <type>Phone</type>
</CustomField>