force-app/main/default/objects/Location__c/fields/cvofphone1__c.field-meta.xml
<CustomField>
    <fullName>cvofphone1__c</fullName>
    <label>Address Phone</label>
    <type>Phone</type>
</CustomField>