force-app/main/default/objects/Location__c/fields/ERPLOCATIONNUM__c.field-meta.xml
<CustomField>
    <fullName>ERPLOCATIONNUM__c</fullName>
    <externalId>true</externalId>
    <label>MSCRM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>