force-app/main/default/objects/Location__c/fields/LocationId__c.field-meta.xml
<CustomField>
    <fullName>LocationId__c</fullName>
    <label>External Address ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>