force-app/main/default/objects/Location__c/fields/LocationLookup__c.field-meta.xml
<CustomField>
    <fullName>LocationLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LocationLookup</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>