force-app/main/default/objects/Location__c/fields/LookupValue__c.field-meta.xml
<CustomField>
    <fullName>LookupValue__c</fullName>
    <formula>addrline1__c &amp; &apos; , &apos; &amp; addrline4__c &amp; &apos; , &apos; &amp; addrline5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LookupValue</label>
    <type>Text</type>
</CustomField>