force-app/main/default/objects/Location__c/fields/Oppdest__c.field-meta.xml
<CustomField>
    <fullName>Oppdest__c</fullName>
    <label>Oppdest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>