force-app/main/default/objects/Location__c/fields/QM_Address_2__c.field-meta.xml
<CustomField>
    <fullName>QM_Address_2__c</fullName>
    <label>QM Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>