force-app/main/default/objects/Location__c/fields/SFAccountCustNum__c.field-meta.xml
<CustomField>
    <fullName>SFAccountCustNum__c</fullName>
    <label>SFAccountCustNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>