force-app/main/default/objects/Location__c/fields/UNCodeFunction__c.field-meta.xml
<CustomField>
    <fullName>UNCodeFunction__c</fullName>
    <label>UNCodeFunction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>