force-app/main/default/objects/Location__c/fields/Warehouse_Number__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Number__c</fullName>
    <label>Warehouse Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>