force-app/main/default/objects/Location__c/recordTypes/Active.recordType-meta.xml
<RecordType>
    <fullName>Active</fullName>
    <active>true</active>
    <label>Active</label>
</RecordType>