force-app/main/default/objects/Location__c/recordTypes/Request.recordType-meta.xml
<RecordType>
    <fullName>Request</fullName>
    <active>true</active>
    <label>Request</label>
</RecordType>