force-app/main/default/objects/Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>UNCode__c</columns>
    <columns>UNCodeFunction__c</columns>
    <columns>addrline2__c</columns>
    <columns>addrline3__c</columns>
    <columns>addrline4__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All w/UNCode</label>
</ListView>