force-app/main/default/objects/Location__c/listViews/QM_Location.listView-meta.xml
<ListView>
    <fullName>QM_Location</fullName>
    <columns>NAME</columns>
    <columns>QM_Address_1__c</columns>
    <columns>QM_Address_2__c</columns>
    <columns>Certification__c</columns>
    <columns>Warehouse_Number__c</columns>
    <columns>Contact__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>QM Location</label>
</ListView>