force-app/main/default/objects/Location__c/listViews/With_UN_Code.listView-meta.xml
<ListView>
    <fullName>With_UN_Code</fullName>
    <columns>NAME</columns>
    <columns>UNCode__c</columns>
    <columns>UNCodeFunction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UNCode__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>With UN Code</label>
</ListView>